RESOLVED FIXED215664
[macOS] Web pages are not responding correctly to changes in "Reduce motion" setting
https://bugs.webkit.org/show_bug.cgi?id=215664
Summary [macOS] Web pages are not responding correctly to changes in "Reduce motion" ...
Per Arne Vollan
Reported 2020-08-19 14:47:52 PDT
Web pages are not responding correctly to changes in the "Reduce motion" accessibility setting under System Preferences > Accessibility > Display. This can for example be seen on https://webkit.org/blog-files/prefers-reduced-motion/prm.htm, while changing the setting.
Attachments
Patch (4.89 KB, patch)
2020-08-19 14:59 PDT, Per Arne Vollan
no flags
Patch (12.90 KB, patch)
2020-08-19 15:51 PDT, Per Arne Vollan
darin: review+
Patch (14.30 KB, patch)
2020-08-20 07:31 PDT, Per Arne Vollan
no flags
Patch (14.98 KB, patch)
2020-08-20 08:08 PDT, Per Arne Vollan
no flags
Patch (15.57 KB, patch)
2020-08-20 08:58 PDT, Per Arne Vollan
no flags
Patch (15.01 KB, patch)
2020-08-20 09:30 PDT, Per Arne Vollan
no flags
Patch (16.23 KB, patch)
2020-08-20 12:13 PDT, Per Arne Vollan
no flags
Patch (16.48 KB, patch)
2020-08-20 12:40 PDT, Per Arne Vollan
no flags
Patch (17.87 KB, patch)
2020-08-20 15:31 PDT, Per Arne Vollan
no flags
Patch (17.84 KB, patch)
2020-08-20 16:48 PDT, Per Arne Vollan
no flags
Patch (17.47 KB, patch)
2020-08-20 17:21 PDT, Per Arne Vollan
no flags
Patch (16.43 KB, patch)
2020-08-20 17:51 PDT, Per Arne Vollan
no flags
Patch (14.07 KB, patch)
2020-08-20 18:37 PDT, Per Arne Vollan
no flags
Patch (14.11 KB, patch)
2020-08-20 19:03 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2020-08-19 14:59:21 PDT
Per Arne Vollan
Comment 2 2020-08-19 15:51:58 PDT
Per Arne Vollan
Comment 3 2020-08-19 15:52:46 PDT
Darin Adler
Comment 4 2020-08-19 16:17:26 PDT
Comment on attachment 406880 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=406880&action=review > Source/WebKit/ChangeLog:3 > + [macOS] Web pages are not responding correctly to changes in "Reduce motion" setting How did we happen to overlook this one but not others? Are there any more of these?
Per Arne Vollan
Comment 5 2020-08-19 16:43:28 PDT
(In reply to Darin Adler from comment #4) > Comment on attachment 406880 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=406880&action=review > > > Source/WebKit/ChangeLog:3 > > + [macOS] Web pages are not responding correctly to changes in "Reduce motion" setting > > How did we happen to overlook this one but not others? Are there any more of > these? Yes, there are potentially more of these cases, since this race is a general issue when updating preferences from the UI process, where the race is usually won by the notification. It might be possible to solve this in a more general way, but I have not been able to think of a way to do that so far. I will try to think of a more general solution. Thanks for reviewing!
Per Arne Vollan
Comment 6 2020-08-20 07:31:42 PDT
Per Arne Vollan
Comment 7 2020-08-20 08:08:17 PDT
Per Arne Vollan
Comment 8 2020-08-20 08:58:07 PDT
Per Arne Vollan
Comment 9 2020-08-20 09:06:40 PDT
The new API test is succeeding locally, but failing on the bots.
Per Arne Vollan
Comment 10 2020-08-20 09:30:09 PDT
Per Arne Vollan
Comment 11 2020-08-20 12:13:57 PDT
Per Arne Vollan
Comment 12 2020-08-20 12:40:16 PDT
Per Arne Vollan
Comment 13 2020-08-20 15:31:01 PDT
Per Arne Vollan
Comment 14 2020-08-20 16:48:12 PDT
Per Arne Vollan
Comment 15 2020-08-20 17:21:51 PDT
Per Arne Vollan
Comment 16 2020-08-20 17:51:31 PDT
Per Arne Vollan
Comment 17 2020-08-20 18:37:54 PDT
Per Arne Vollan
Comment 18 2020-08-20 19:03:29 PDT
EWS
Comment 19 2020-08-20 19:31:45 PDT
Committed r265996: <https://trac.webkit.org/changeset/265996> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406997 [details].
Simon Fraser (smfr)
Comment 20 2020-08-20 20:23:19 PDT
How many other preferences are going to suffer from this same bug?
Darin Adler
Comment 21 2020-08-21 09:16:53 PDT
I asked the same question and the answer is in comment #5.
Note You need to log in before you can comment on or make changes to this bug.